# devchallenge_excel

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: container.py  interface.py
src/excel/: admin.py  dto.py  expections.py  models.py  repository.py  serializers.py  services.py  tests.py  urls.py  views.py
src/excel/migrations/: 0001_initial.py  0002_sheet_name_alter_cell_value.py  0003_cell_name_alter_cell_unique_together.py  0004_alter_cell_name_alter_cell_value_alter_sheet_name.py  0005_alter_cell_sheet.py  0006_cell_result.py  0007_alter_cell_result_alter_sheet_name.py
